Working on firebase connectivity.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,4 +1,8 @@
 <section id="home">
-    <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting>
+  <div id="main-title">
+    <h1>5 SQUADRON</h1>
+    <a ui-sref="newAttendee" class="register-btn">
+      <h3 class="register-title">Register</h3>
+    </a>
+  </div>
 </section>
