--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -8,7 +8,7 @@
     <label>Email Address</label>
     <input type="email" ng-model="newAttendeeData.email"></input>
     <label>Password</label>
-    <input type="password"></input>
+    <input type="password" ng-model="newAttendeeData.password"></input>
     <label>Confirm Password</label>
     <input type="password"></input>
     <h4>Association with 5 Squadron</h4>
