--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -5,4 +5,8 @@
       <h3 class="register-title">Register</h3>
     </a>
   </div>
+  <div class="occassion-title">
+    <h3>75 YEARS</h3>
+    <span class="occassion-description">SERVING NEW ZEALAND</span>
+  </div>
 </section>
