--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -1,5 +1,6 @@
 <section id="registerNewAttendee">
-  <form name="register" ng-submit="saveAttendee()">
+  <h2 ng-show="processingData">Creating new user...</h2>
+  <form ng-hide="processingData" name="register" ng-submit="saveAttendee()">
     <h4>Contact Details</h4>
     <label>First Name</label>
     <input type="text" ng-model="newAttendeeData.firstName" name="firstName"></input>
