Working on client side firebase auth.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,12 +1,15 @@
 <section id="home">
   <div id="main-title">
     <h1>5 SQUADRON</h1>
-    <a ui-sref="newAttendee" class="register-btn">
-      <h3 class="register-title">Register</h3>
-    </a>
   </div>
   <div class="occassion-title">
     <h3>75 YEARS</h3>
     <span class="occassion-description">SERVING NEW ZEALAND</span>
   </div>
+  <a ui-sref="newAttendee">
+    <span>Register</span>
+  </a>
+  <a ui-sref="login">
+    <span>Login </span>
+  </a>
 </section>
