Working on user data object.

--- a/browser/js/common/directives/header-bar/header-bar.html
+++ b/browser/js/common/directives/header-bar/header-bar.html
@@ -2,4 +2,7 @@
   <div ng-repeat="link in links" class="header-item">
     <h4 ui-sref-active="headerStateActive" ui-sref="{{ link.state }}" >{{ link.title }}</h4>
   </div>
+  <div ng-show="currentUser" class="header-item">
+    <h4 ng-click="logoutUser()">{{ currentUser.password.email }}</h4>
+  </div>
 </section>
