--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -3,20 +3,24 @@
     <span ng-show="error" class="warn">{{ error }}</span>
   </div>
   <h2 ng-show="processingData">Creating new user...</h2>
-  <h3>It would be great to have you, let's get you registered!</h3>
-  <div class="button-holder flex-container-row">
-    <div ng-click="emailRegister()" class="button-panel">
+  <h3>It would be great to have you, register below...</h3>
+  <div ng-show="registerMethodChosen" class=" register-option-complete flex-container-row">
+    <h4>Great you are registering using {{ registerMethodChosen }}</h4>
+    <button class="btn btn-default" ng-click="registerMethod(null)">Change</button>
+</div>
+  <div ng-hide="registerMethodChosen !== null" class="button-holder flex-container-row">
+    <div ng-click="registerMethod('email')" class="button-panel">
       @
     </div>
-    <div class="button-panel">
+    <div ng-click="registerMethod('facebook')" class="button-panel">
       Facebook
     </div>
-    <div class="button-panel">
+    <div ng-click="registerMethod('google')" class="button-panel">
       G+
     </div>
   </div>
   <div class="row">
-    <form ng-hide="!registerWithEmail" id="registerForm" name="register" ng-submit="saveAttendee()">
+    <form ng-hide="registerMethodChosen !== 'email'" id="registerForm" name="register" ng-submit="saveAttendee()">
       <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4">
         <label class="control-label">First Name</label>
         <input class="form-control" type="text" ng-model="newAttendeeData.firstName" name="firstName"></input>
@@ -24,8 +28,6 @@
         <input class="form-control" type="text" ng-model="newAttendeeData.lastName" name="lastName"></input>
         <label class="control-label">Email Address</label>
         <input class="form-control" type="email" name="attendeeEmail" ng-model="newAttendeeData.email"></input><span class="bg-danger" ng-show="!register.attendeeEmail.$valid && register.attendeeEmail.$dirty">Whoops, that email doesn't look quite right?</span>
-        <label>Phone Number</label>
-        <input type="tel" class="form-control"></input>
         <label>Password</label>
         <input type="password" name="passwordOne" class="form-control"></input>
         <label>Confirm Password</label>
