--- a/browser/js/login/login.html
+++ b/browser/js/login/login.html
@@ -1,16 +1,26 @@
-<form id="login-form" name="loginForm" ng-submit="loginForm.$valid && sendLogin(login)">
-
-    <alert type="danger" ng-show="error">
-        {{ error }}
-    </alert>
-
-    <div class="form-group">
-        <label for="email">Email address</label>
-        <input type="text" ng-model="login.email" class="form-control" id="email" placeholder="Enter email">
+<section class="login">
+  <div class="login-selector flex-container-row">
+    <div ng-repeat="option in loginOpts" class="login-option" ng-click="setLoginMethod(option.method)">
+      Login with {{ option.method }}
     </div>
-    <div class="form-group">
-        <label for="login-password">Password</label>
-        <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
-    </div>
-    <button type="submit" class="btn btn-default">Submit</button>
-</form>
+  </div>
+  <div class="flex-container-row">
+  </div>
+
+  <form ng-show="loginMethodName === 'email'" id="login-form" name="loginForm" ng-submit="loginForm.$valid && executeLogin('email')">
+
+      <alert type="danger" ng-show="error">
+          {{ error }}
+      </alert>
+
+      <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="text" ng-model="login.email" class="form-control" id="email" placeholder="Enter email">
+      </div>
+      <div class="form-group">
+          <label for="login-password">Password</label>
+          <input type="password" ng-model="login.password" class="form-control" id="login-password" placeholder="Password">
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</section>
