--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -20,8 +20,8 @@
     </div>
   </div>
   <div class="row">
-    <form ng-hide="registerMethodChosen !== 'email'" id="registerForm" name="register" ng-submit="saveAttendee()">
-      <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4">
+    <form ng-hide="registerMethodChosen === null" id="registerForm" name="register" ng-submit="saveAttendee()">
+      <div ng-show="registerMethodChosen === 'email'" class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4">
         <label class="control-label">First Name</label>
         <input class="form-control" type="text" ng-model="newAttendeeData.firstName" name="firstName"></input>
         <label class="control-label">Last Name</label>
@@ -36,13 +36,13 @@
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
         <h4>It'd be great to have you! How do you know us?</h4>
         <div class="radio">
-          <label class="control-label"> <input type="radio" name="association" ng-model="attendee.association" value="current">Current Squadron Member</label>
+          <label class="control-label"> <input type="radio" name="association" ng-model="newAttendeeData.association" value="current">Current Squadron Member</label>
         </div>
         <div class="radio">
-          <label class="control-label"><input type="radio" ng-model="attendee.association" name="association" value="former">Former Squadron Member</label>
+          <label class="control-label"><input type="radio" ng-model="newAttendeeData.association" name="association" value="former">Former Squadron Member</label>
         </div>
         <div class="radio">
-          <label class="control-label"><input type="radio" name="association" ng-model="attendee.association">Contractor</label>
+          <label class="control-label"><input type="radio" name="association" ng-model="newAttendeeData.association">Contractor</label>
         </div>
 
         <input type="submit" value="Register"></input>
