Completed basic attendeeData population.

--- a/browser/js/management/management.html
+++ b/browser/js/management/management.html
@@ -10,7 +10,7 @@
     </form>
   </div>
   <div>
-    <p ng-repeat="attendee in dinnerAttendees">{{ attendee }}</p>
+    <p>DINNER RSVP: {{ dinnerAttendees.length }}</p>
   </div>
 
 </section>
