--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -42,16 +42,16 @@
           <label class="control-label"><input type="radio" ng-model="newAttendeeData.association" name="association" value="former">Former Squadron Member</label>
         </div>
         <div class="radio">
-          <label class="control-label"><input type="radio" name="association" ng-model="newAttendeeData.association">Contractor</label>
+          <label class="control-label"><input type="radio" name="association" value="contractor" ng-model="newAttendeeData.association">Contractor</label>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
         <h3>What events are you planning to attend?</h3>
         <div class="checkbox">
           <label>
-          <input type="checkbox" ng-model="newAttendeeData.events" value="openDay"></input>Open Day</label>
+          <input type="checkbox" ng-model="newAttendeeData.events.openday" value="openday"></input>Open Day</label>
           <label>
-          <input type="checkbox" ng-model="newAttendeeData.events" value="dinner"></input>Dinner Function</label>
+          <input type="checkbox" ng-model="newAttendeeData.events.dinner" value="dinner"></input>Dinner Function</label>
         </div>
       <div>
 
