Working on committing data to database after oAuthRedirect, instead of using OAuth pop ups.

--- a/browser/js/referredNewAttendee/referredNewAttendee.html
+++ b/browser/js/referredNewAttendee/referredNewAttendee.html
@@ -1,6 +1,6 @@
 <section id="referredNewAttendee">
     <h3>Sorry, looks like you haven't registered yet, get started below.</h3>
-    <form id="referredRegisterForm" name="referredRegister" ng-submit="createNewReferredUser()">
+    <form id="referredRegisterForm" name="referredRegister" ng-submit="createNewUserFromReferral()">
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
         <h4>It'd be great to have you! How do you know us?</h4>
         <div class="radio">
