--- a/browser/js/referredNewAttendee/referredNewAttendee.html
+++ b/browser/js/referredNewAttendee/referredNewAttendee.html
@@ -2,7 +2,7 @@
     <h3>Sorry, looks like you haven't registered yet, get started below.</h3>
     <form id="referredRegisterForm" name="referredRegister" ng-submit="createNewUserFromReferral()">
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
-        <h4>It'd be great to have you! How do you know us?</h4>
+        <h4>It'd be great to have you! Are you a ...</h4>
         <div class="radio">
           <label class="control-label"> <input type="radio" name="association" ng-model="newAttendeeData.association" value="current">Current Squadron Member</label>
         </div>
