--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -7,10 +7,15 @@
       <p>{{ user.association }}</p>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
       <h3>Events you are attending: </h3>
-      <p ng-repeat="event in events"><label><input type="checkbox" value="{{ event }}" checked="true"></input>{{ event.name }}</label>
-        <button>Bringing guests?</button>
-        <button ng-click="removeFromEvent(event)">Cancel Attendance</button>
-      </p>
+      <div ng-repeat="event in events"><label><input type="checkbox" value="{{ event }}" checked="true"></input>{{ event.name }}</label>
+        <div class="attend-event" ng-hide="event.attending">
+          <button ng-click="attendEvent(event.$id)">Register for Event</button>
+        </div>
+        <div ng-show="event.attending" class="attending-options">
+          <button>Bringing guests?</button>
+          <button ng-click="removeFromEvent(event.$id)">Cancel Attendance</button>
+        </div>
+      </div>
     </div>
   </form>
 
