--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -7,7 +7,8 @@
       <p>{{ user.association }}</p>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
       <h3>Events you are attending: </h3>
-      <div ng-repeat="event in events"><label><input type="checkbox" value="{{ event }}" checked="true"></input>{{ event.name }}</label>
+      <attendee-event ng-repeat="event in events" evt="event" attendee="user"></attendee-event>
+      <!-- <div ng-repeat="event in events"><label><input type="checkbox" value="{{ event }}" checked="true"></input>{{ event.name }}</label>
         <div class="attend-event" ng-hide="event.attending">
           <button ng-click="attendEvent(event.$id)">Register for Event</button>
         </div>
@@ -15,7 +16,7 @@
           <button>Bringing guests?</button>
           <button ng-click="removeFromEvent(event.$id)">Cancel Attendance</button>
         </div>
-      </div>
+      </div> -->
     </div>
   </form>
 
