Have basic UI manipulation working to show in near real-time if user is registering for an event or not.

--- a/browser/js/common/directives/attendee-event/attendee-event.html
+++ b/browser/js/common/directives/attendee-event/attendee-event.html
@@ -1,9 +1,9 @@
 <section>
   <h3>{{ evt.name }}</h3>
-  <div class="attend-event" ng-hide="evt.attending">
+  <div class="attend-event" ng-hide="attending">
     <button ng-click="attendEvent(evt.$id)">Register for Event</button>
   </div>
-  <div ng-show="evt.attending" class="attending-options">
+  <div ng-show="attending" class="attending-options">
     <button>Bringing guests?</button>
     <button ng-click="removeFromEvent(evt.$id)">Cancel Attendance</button>
   </div>
