--- a/browser/js/common/directives/event-guest/event-guest.html
+++ b/browser/js/common/directives/event-guest/event-guest.html
@@ -1,4 +1,4 @@
 <div>
-  <h4>Guest First Name and Guest Last Name</h4>
+  <h4>{{ guest.$value }}</h4>
   <button ng-click="removeGuest()">Remove Guest</button>
 </div>
