--- a/browser/js/common/directives/add-event-guest/add-event-guest.html
+++ b/browser/js/common/directives/add-event-guest/add-event-guest.html
@@ -1,4 +1,4 @@
-<form ng-submit="addNewGuest(guestDetails)">
+<form ng-submit="addNewGuest()">
   <input type="text" ng-model="guestDetails.firstName"></input>
   <input type="text" ng-model="guestDetails.lastName"></input>
   <input type="submit" value="Add Guest"></input>
