Renamed folders and files with regard to announcement-modification directive.

--- a/browser/js/management/management-announcements.html
+++ b/browser/js/management/management-announcements.html
@@ -1,6 +1,6 @@
 <section id="management-announcements">
   <div>
-    <announcement-removal ng-repeat="announcement in announcements" announcement="announcement"></announcement-removal>
+    <announcement-modification ng-repeat="announcement in announcements" announcement="announcement"></announcement-modification>
   </div>
   <form ng-submit="addNew()">
     <label>Title</label>
