Completed CRUD operations for announcements in the management view.

--- a/browser/js/common/directives/announcement-modification/announcement-modification.html
+++ b/browser/js/common/directives/announcement-modification/announcement-modification.html
@@ -1,7 +1,15 @@
-<article>
+<article ng-hide="editMode">
   <div>
     <h4>{{ announcement.title }}</h4>
     <button ng-click="removeAnnouncement(announcement)">Delete</button>
+    <button ng-click="editAnnouncement()">Edit</button>
   </div>
   <p>{{ announcement.content }}</p>
 </article>
+<form ng-show="editMode" ng-submit="updateAnnouncement()">
+  <label>Title</label>
+  <input type="text" ng-model="announcement.title"></input>
+  <label>Content</label>
+  <textarea ng-model="announcement.content"></textarea>
+  <input type="submit" value="Save update"></input>
+</form>
