--- a/browser/js/common/directives/announcement-modification/announcement-modification.html
+++ b/browser/js/common/directives/announcement-modification/announcement-modification.html
@@ -1,15 +1,17 @@
-<article ng-hide="editMode">
+<article>
   <div>
     <h4>{{ announcement.title }}</h4>
     <button ng-click="removeAnnouncement(announcement)">Delete</button>
-    <button ng-click="editAnnouncement()">Edit</button>
+    <button ng-click="toggleEditMode()">{{ editOption }}</button>
   </div>
   <p>{{ announcement.content }}</p>
 </article>
-<form ng-show="editMode" ng-submit="updateAnnouncement()">
-  <label>Title</label>
-  <input type="text" ng-model="announcement.title"></input>
-  <label>Content</label>
-  <textarea ng-model="announcement.content"></textarea>
-  <input type="submit" value="Save update"></input>
-</form>
+<div>
+  <form ng-show="editMode" ng-submit="updateAnnouncement()">
+    <label>Title</label>
+    <input type="text" ng-model="modifiedEntry.title"></input>
+    <label>Content</label>
+    <textarea ng-model="modifiedEntry.content"></textarea>
+    <input type="submit" value="Save update"></input>
+  </form>
+</div>
