Need origin store for distinct event. Reworking origin store.

--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -42,7 +42,7 @@
           <label class="control-label"><input type="radio" ng-model="newAttendeeData.association" name="association" value="airforce">Posted Off Squadron</label>
         </div>
         <div class="radio">
-          <label class="control-label"><input type="radio" ng-model="newAttendeeData.association" name="association" value="former">Retired Squadron Member or current 5 Sqn Association Member</label>
+          <label class="control-label"><input type="radio" ng-model="newAttendeeData.association" name="association" value="retired">Retired Squadron Member or current 5 Sqn Association Member</label>
         </div>
         <div class="radio">
           <label class="control-label"><input type="radio" name="association" value="vip-contractor" ng-model="newAttendeeData.association">Contractor or Sponsor</label>
