Completed working out origin store for each event. Now working on resolving two unwanted behaviours that were introducted. Namely, event numbers starting from two, and an undefined key being added to the event guest list when registering a new attendee.

--- a/browser/js/common/directives/attendee-event/attendee-event.html
+++ b/browser/js/common/directives/attendee-event/attendee-event.html
@@ -8,7 +8,7 @@
   <section class="attendee-aeg">
     <!-- <div> -->
 
-      <event-guest ng-repeat="guest in guests" attendeeid="{{attendee.$id}}" guest="guest" evtid="{{evt.$id}}"></event-guest>
+      <event-guest ng-repeat="guest in guests" attendee="attendee" guest="guest" evtid="{{evt.$id}}"></event-guest>
       <add-event-guest attendee="attendee" evt="evt"></add-event-guest>
   </section>
 </div>
