--- a/browser/js/common/directives/modify-guest-category/modify-guest-category.html
+++ b/browser/js/common/directives/modify-guest-category/modify-guest-category.html
@@ -1,7 +1,14 @@
 <div>
   <form ng-submit="updateCatName()">
-    <input type="text" ng-model="cat.$value"></input>
-    <button ng-click="toggleEdit()">Edit</button>
-    <input type="submit" value="Update"></input>
+    <div class="input-form">
+      <input class="input-sqn" type="text" ng-model="modifiableCatObj.$value">
+      </input>
+      <!-- <div class="user-form-message">
+        <h4>Updated</h4>
+      </div> -->
+    </div>
+
+    <button class="sqn-btn" ng-click="toggleEdit()"><span ng-show="!isEditing">Edit</span><span ng-show="isEditing">Cancel</span></button>
+    <input class="sqn-btn" type="submit" value="Update"></input>
   </form>
 </div>
