--- a/browser/js/management/management-guestCategories.html
+++ b/browser/js/management/management-guestCategories.html
@@ -4,8 +4,8 @@
   </header>
   <form ng-submit="addNewCategory()">
     <label>New Category Name: </label>
-    <input type="text" ng-model="guestCategoryName"></input>
-    <input type="submit" value="Add Category"></button>
+    <input class="input-sqn" type="text" ng-model="guestCategoryName"></input>
+    <input class="sqn-btn" type="submit" value="Add Category"></button>
   </form>
   <div>
     <modify-guest-category ng-repeat="guestCategory in guestCategories" cat=guestCategory></modify-guest-category>
