--- a/browser/js/management/management-guestCategories.html
+++ b/browser/js/management/management-guestCategories.html
@@ -8,6 +8,6 @@
     <input class="sqn-btn" type="submit" value="Add Category"></button>
   </form>
   <div class="guest-category-list">
-    <modify-guest-category ng-repeat="guestCategory in guestCategories track by $index" cat=guestCategory></modify-guest-category>
+    <modify-guest-category ng-repeat="guestCategory in guestCategories" cat=guestCategory></modify-guest-category>
   </div>
 </section>
