--- a/browser/js/common/directives/event-guest/event-guest.html
+++ b/browser/js/common/directives/event-guest/event-guest.html
@@ -1,4 +1,4 @@
 <div>
   <h4>{{ guest.$value }}</h4>
-  <button ng-click="removeGuest()">Remove Guest</button>
+  <button class="sqn-btn-danger" ng-click="removeGuest()">Remove Guest</button>
 </div>
