--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -6,10 +6,6 @@
     <h3>75 YEARS</h3>
     <span class="occassion-description">SERVING NEW ZEALAND</span>
   </div>
-  <a ui-sref="newAttendee">
-    <span>Register</span>
-  </a>
-  <a ui-sref="login">
-    <span>Login </span>
-  </a>
+  <button class="sqn-btn-homepage" ui-sref="newAttendee">Register</button>
+  <button class="sqn-btn-homepage"ui-sref="login">Login</button>
 </section>
