--- a/browser/js/management/management-events.html
+++ b/browser/js/management/management-events.html
@@ -1,5 +1,5 @@
-<section id="management-events">
-  <event-modification ng-repeat="evt in allEvents" evt="evt">
+<section id="management-events" class="management-sub-menu">
+  <event-modification ng-repeat="evt in allEvents" evt="evt" categories="cats">
   </event-modification>
-  
+
 </section>
