--- a/browser/js/common/directives/event-modification/event-modification.html
+++ b/browser/js/common/directives/event-modification/event-modification.html
@@ -3,15 +3,19 @@
     <h4>{{ evt.name }}</h4>
     <button class="sqn-btn-danger" ng-click="removeEvent(evt)">Delete</button>
     <button class="sqn-btn" ng-click="toggleEditMode()">{{ editOption }}</button>
+    <button class="sqn-btn" ng-click="toggleGuestLimits()">{{ guestLimits.buttonText }} Guest Limits</button>
   </header>
   <div>
     <p> {{ displayDate }} | {{ displayTime }}</p>
     <p>{{ evt.location }}</p>
   </div>
+  <div>
+    <event-guest-limit ng-show="guestLimits.displayMenu" evt=evt cats="categories"></event-guest-limit>
+  </div>
   <footer ng-show="editMode">
     <form  ng-submit="updateEvent()">
       <label>Name</label>
-      <input type="text" ng-model="modifiedEntry.name"></input>
+      <input class="sqnInput sqnInputActive" type="text" ng-model="modifiedEntry.name"></input>
       <label>Date</label>
       <input type="date" ng-model="modifiedEntry.date"></label>
       <label>Time</label>
