--- a/browser/js/common/directives/header-bar/header-bar.html
+++ b/browser/js/common/directives/header-bar/header-bar.html
@@ -1,5 +1,11 @@
 <section id="header-bar" class="flex-container-row">
-  <div ng-show="currentUser" class="header-item">
-    <h4 ng-click="logoutUser()">Hi {{ currentUser.firstName }}!</h4>
+  <div class="header-item-menu">
+    <button class="sqn-btn-header" ui-sref="home">Home</button>
+  </div>
+  <div ng-show="currentUser" class="header-item-user">
+    <h4>Hi {{ currentUser.firstName }}!</h4>
+    <button ng-click="goToUserProfile()" class="sqn-btn-header">Profile</button>
+    <button ng-show="currentUser.manager" class="sqn-btn-header" ui-sref="management">Site Management</button>
+    <button ng-click="logoutUser()" class="sqn-btn-header">Logout</button>
   </div>
 </section>
