--- a/browser/js/new-attendee/new-attendee.html
+++ b/browser/js/new-attendee/new-attendee.html
@@ -35,17 +35,8 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
         <h4>It'd be great to have you! How do you know us?</h4>
-        <div class="radio">
-          <label class="control-label"> <input type="radio" name="association" ng-model="newAttendeeData.association" value="current">Currently Posted to Squadron</label>
-        </div>
-        <div class="radio">
-          <label class="control-label"><input type="radio" ng-model="newAttendeeData.association" name="association" value="airforce">Posted Off Squadron</label>
-        </div>
-        <div class="radio">
-          <label class="control-label"><input type="radio" ng-model="newAttendeeData.association" name="association" value="retired">Retired Squadron Member or current 5 Sqn Association Member</label>
-        </div>
-        <div class="radio">
-          <label class="control-label"><input type="radio" name="association" value="vip-contractor" ng-model="newAttendeeData.association">Contractor or Sponsor</label>
+        <div class="radio" ng-repeat="category in categories">
+          <label class="control-label"> <input event-limit-check type="radio" name="association" ng-model="newAttendeeData.association" value="{{ category.$id }}">{{ category.$value }}</label>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
@@ -60,9 +51,9 @@
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
         <h3>What events are you planning to attend?</h3>
         <div class="checkbox">
-          <div ng-repeat="event in events">
+          <div ng-repeat="evt in events">
             <label>
-            <input type="checkbox" ng-model="newAttendeeData.events[event.$id]" value="{{ event.$id }}" ng-true-value="true"  ng-false-value="false"></input>{{ event.name }}</label>
+            <input type="checkbox" ng-model="newAttendeeData.events[evt.$id]" value="{{ evt.$id }}" ng-true-value="true"  ng-false-value="false" ng-readonly="!evt.available"></input>{{ evt.name }}</label>
         </div>
 
         <input type="submit" value="Register"></input>
