--- a/browser/js/referredNewAttendee/referredNewAttendee.html
+++ b/browser/js/referredNewAttendee/referredNewAttendee.html
@@ -4,7 +4,7 @@
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 form-group">
         <h4>It'd be great to have you! How do you know us?</h4>
         <div class="radio">
-          <label class="control-label"> <input type="radio" name="association" ng-model="newAttendeeData.association" value="current">Currently Posted to Squadron</label>
+          <label class="control-label"> <input event-limit-check type="radio" name="association" ng-model="newAttendeeData.association" value="current">Currently Posted to Squadron</label>
         </div>
         <div class="radio">
           <label class="control-label"><input type="radio" ng-model="newAttendeeData.association" name="association" value="airforce">Posted Off Squadron</label>
